...
                                <rect key="frame" x="29" y="242" width="356" height="170"/>
                                <subviews>
                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img_logo_white" translatesAutoresizingMaskIntoConstraints="NO" id="KbH-nF-LSv">
                                        <rect key="frame" x="-86" y="0.0" width="442" height="170"/>
                                    </imageView>
...
                                            </constraint>
                                        </constraints>
                                        <state key="normal" title="Sign In">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                            <constraint firstAttribute="height" constant="55" id="Ed9-Na-2Uc"/>
                                        </constraints>
                                        <state key="normal" title="Register">
                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
...
                                                    <constraint firstAttribute="height" constant="55" id="CBM-Ge-Cdu"/>
                                                </constraints>
                                                <state key="normal" title="Continue"/>
                                                <connections>
                                                    <action selector="onContinuePress" destination="0vR-kF-bp8" eventType="touchUpInside" id="egp-mH-lMh"/>
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kXl-8s-8Mj" customClass="UINavigationBackButton" customModule="ComEd" customModuleProvider="target">
                                        <rect key="frame" x="8.5" y="7" width="34" height="30"/>
                                        <state key="normal" title="Back"/>
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="boolean" keyPath="isLabelHidden" value="YES"/>
...
                                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                            </view>
                                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Keep me signed in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hfa-fy-2Sb">
                                                                <rect key="frame" x="44" y="212.5" width="133" height="19.5"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
...
                                                                <rect key="frame" x="20" y="0.0" width="374" height="128"/>
                                                                <subviews>
                                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username / Email Address" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstrai
                                                                        <rect key="frame" x="15" y="15" width="344" height="47.5"/>
                                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
