...
        viewModel.signInButtonEnabled.drive(signInButton.rx.isEnabled).disposed(by: disposeBag)

        let placeholderText: String
        if Configuration.shared.opco != .bge {
            placeholderText = Configuration.shared.opco.isPHI ? "Username (Email Address)" : "Email"
        } else {
            placeholderText = "Username / Email Address"
        }
        
        usernameTextField.placeholder = NSLocalizedString(placeholderText, comment: "")
        usernameTextField.textField.autocorrectionType = .no
        usernameTextField.textField.returnKeyType = .next
        usernameTextField.textField.keyboardType = .emailAddress
        usernameTextField.textField.textContentType = .username

        passwordTextField.placeholder = NSLocalizedString("Password", comment: "")
        passwordTextField.textField.isSecureTextEntry = true
        passwordTextField.textField.returnKeyType = .done
        passwordTextField.textField.isShowingAccessory = true
        passwordTextField.textField.textContentType = .password

        eyeballButton.accessibilityLabel = NSLocalizedString("Show password", comment: "")
...
        navigationController?.navigationBar.prefersLargeTitles = true
        navigationController?.navigationItem.largeTitleDisplayMode = .always
        navigationController?.interactivePopGestureRecognizer?.delegate = self

        // Reset the view for when user pops back from ChangePasswordViewController
        signInButton.reset()
        signInButton.accessibilityLabel = "Sign In"
        signInButton.accessibilityViewIsModal = false
        passwordTextField.textField.text = ""
        passwordTextField.textField.sendActions(for: .editingChanged)
    }

    override func viewDidAppear(_ animated: Bool) {
...
                showErrorAlertWith(title: nil, message: message)
                return
            }
            
            if !viewModel.passwordMeetsRequirements {
                let alert = UIAlertController(
                    title: NSLocalizedString("Sign In Error", comment: ""),
                    message: NSLocalizedString("To provide increased protection of your account, passwords must now meet new complexity standards.", comment: ""),
                    preferredStyle: .alert
                )
                alert.addAction(UIAlertAction(title: NSLocalizedString("Try Again", comment: ""), style: .cancel, handler: nil))
                alert.addAction(UIAlertAction(title: NSLocalizedString("Change Password", comment: ""), style: .default, handler: { _ in
                    let storyboard = UIStoryboard(name: "More", bundle: nil)
...
