...
    
    func switchViews(animated: Bool, onCompletion: (() -> Void)?) {
        let duration = animated ? 1.0 : 0.0
        if inGame {
            inGame = false
            
            let controller = storyboard!.instantiateViewController(withIdentifier: "Home")
            controller.view.translatesAutoresizingMaskIntoConstraints = false
            addChild(controller)
            controller.beginAppearanceTransition(true, animated: false)
            
            UIView.transition(from: containerView, to: controller.view, duration: duration, options: [.transitionFlipFromRight], completion: { [weak self] _ in
                self?.containerView = controller.view
...
